--- a/src/components/SearchResultsList/SearchResultsList.css
+++ b/src/components/SearchResultsList/SearchResultsList.css
@@ -1,5 +1,7 @@
+@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0);
+
 .search-results-display {
-  margin: 0 auto;
+  margin: 0 15%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -7,12 +9,46 @@
 }
 
 .search-result-card {
-  width: 200px;
-  height: 200px;
-  padding: 5px;
+  position: relative;
+  text-align: center;
+  width: 250px;
+  height: 250px;
+  margin: 5px;
+  border: 1px solid lightgray;
+  border-radius: 5px;
 }
 
 .search-img {
-  max-width: 100%;
-  max-height: 100%;
+  margin-top: 10px;
+  max-width: 90%;
+  max-height: 75%;
+}
+
+.search-card-info {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  top: 80%;
+}
+
+.fav-btn {
+  aspect-ratio: 1/1;
+  cursor: pointer;
+  color: white;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  background-color: rgb(0, 0, 0, 0.3);
+  border: none;
+  border-radius: 5px;
+}
+
+.fav-btn:hover {
+  background-color: rgb(0, 0, 0, 0.6);
+}
+
+.fav-btn:active {
+  color: black;
 }
