--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,5 @@ body, h1, h2, h3, p {
 body {
   background-color: whitesmoke;
 }
-  
+
+@import url(https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0);
