--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,9 +1,3 @@
-.search-form {
-  margin: 10px;
-  display: flex;
-  justify-content: center;
-}
-
 input {
   padding: 10px;
   font-size: 18px;
@@ -16,8 +10,7 @@ input:focus {
   border-bottom: 2px solid red;
 }
 
-
-button {
+.search-btn {
   margin-left: 10px;
   width: 45px;
   cursor: pointer;
@@ -26,10 +19,10 @@ button {
   border-radius: 5px;
 }
 
-button:hover {
+.search-btn:hover {
   background-color: rgb(0, 0, 0, 0.2);
 }
 
-button:active {
+.search-btn:active {
   color: white;
 }
