--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -46,3 +46,18 @@ h3 {
   max-width: 90%;
   max-height: 70%;
 }
+
+select {
+  background: none;
+  border: none;
+  border-bottom: 1px solid blue;
+  margin-top: 2px;
+}
+
+select:hover {
+  border-bottom: 1px solid red;
+}
+
+select:focus {
+  outline: 1px solid gray;
+}
