--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -52,6 +52,8 @@ select {
   border: none;
   border-bottom: 1px solid blue;
   margin-top: 2px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 12px;
 }
 
 select:hover {
